--- a/segurenta/src/app/components/home/home.component.html
+++ b/segurenta/src/app/components/home/home.component.html
@@ -92,17 +92,51 @@
 
     <!-- Second section: Propiedades Màs Recientes  -->
     <div class="container-fluid">
+
+            <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="card card-hover h-100">
+                                <div class="card-body">
+                                    <i class="fa fa-search fa-5x float-right"></i>
+                                    <h3 class="card-title">Front</h3>
+                                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                    <div class="reveal bg-warning p-2">
+                                        This is hidden until card in hovered!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         <div class="col-sm-12">
             <div class="my-4">
                 <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let picture of pictures">
-                    <div class="card border-0">
+                    <div class="card card-hover border-0">
                         <img class="card-img-top" [src]="picture.img">
-                        <div class="card-img-overlay" [routerLink]="['/property-detail']">
+                        <div class="card-img-overlay">
+                            <div class="reveal bg-gray p-2">
+                                <div class="row">
+                                    <div class="col-6">
+                                            <a class="icon-left" [routerLink]="['/property-detail']"><fa-icon class="icon" [icon]="[ 'fas', 'play']"></fa-icon>
+                                                <br><span class="text-card-white icon-left">Video</span></a>
+                                    </div>
+                                    <div class="col-6 icon-left">
+                                            <a><fa-icon class="icon" [icon]="[ 'fas', 'ellipsis-v']"></fa-icon>
+                                                <br><span class="text-card-white">Más</span></a>
+                                        </div>
+                                </div>
+
+                                    
+                                   
+                                </div>
                         </div>
                         <div class="card-body py-1 px-0">
+                                
                             <div class="row">
                                 <div class="col d-none d-lg-block">
                                     <p class="card-text">
@@ -120,6 +154,7 @@
                                         <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1
                                     </p>
                                 </div>
+                               
                                 <!-- <div class="col">
                                     <p class="card-text d-inline-block">Ver</p>
                                     <a [routerLink]="['/property-detail']" target="_blank">
