--- a/segurenta/src/app/shared/components/in-progress/in-progress.component.html
+++ b/segurenta/src/app/shared/components/in-progress/in-progress.component.html
@@ -7,22 +7,40 @@
                     <img class="card-img-top " [src]="picture.img ">
                     <div class="card-img-overlay p-0 img-opacity">
                         <div class="card-title p-1">
-                            <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                             <div class="text-white d-inline float-right">
                                 <a>
-                                    <!-- <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon> -->
+                                    <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                                 </a>
                             </div>
                         </div>
                         <div class="card-text">
                             <div class="card-text bottom-left">
-                                <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                <p class="text-white text-state">{{ picture.title }}<br>{{ picture.location }}</p>
                             </div>
                             <div class="card-text bottom-right">
-                                <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                <p class="text-white text-state">${{ picture.price }}<br>{{ picture.period }}</p>
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="card-img-overlay col-sm-12">
+                                <div class="card-title">
+                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <div class="text-white d-inline float-right">
+                                        <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
+                                    </div>
+                                </div>
+                                <div class="card-text d-flex bd-highlight">
+                                    <div class="card-text w-100">
+                                        <p class="text-white m-0">{{ picture.title }}</p>
+                                        <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                    </div>
+                                    <div class="card-text flex-shrink-1 ">
+                                        <p class="text-white text-sm-right m-0">${{ picture.price }}</p>
+                                        <p class="card-text text-white text-right m-0">{{ picture.period }}</p>
+                                    </div>
+                                </div>
+                            </div> -->
                 </div>
             </div>
             <div class="card-deck mb-5 pt-5">
@@ -30,19 +48,19 @@
                     <img class="card-img-top " [src]="picture.img ">
                     <div class="card-img-overlay p-0 img-opacity">
                         <div class="card-title p-1">
-                            <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <p class="text-white text-state  d-inline"><b>{{ picture.state }}</b></p>
                             <div class="text-white d-inline float-right">
                                 <a>
-                                    <!-- <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon> -->
+                                    <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                                 </a>
                             </div>
                         </div>
                         <div class="card-text">
                             <div class="card-text bottom-left">
-                                <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                <p class="text-white text-state ">{{ picture.title }}<br>{{ picture.location }}</p>
                             </div>
                             <div class="card-text bottom-right">
-                                <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                <p class="text-white text-state ">${{ picture.price }}<br>{{ picture.period }}</p>
                             </div>
                         </div>
                     </div>
@@ -50,4 +68,5 @@
             </div>
         </div>
     </div>
+
 </div>
