--- a/segurenta/src/app/shared/components/request-date/request-date.component.html
+++ b/segurenta/src/app/shared/components/request-date/request-date.component.html
@@ -7,25 +7,31 @@
                     <img class="card-img-top " [src]="picture.img ">
                     <div class="card-img-overlay col-sm-12">
                         <div class="card-title d-flex flex-row align-items-start">
-                            <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                             <div class="text-white text-right">
-                                <!-- <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon> -->
+                                <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                             </div>
                         </div>
                         <div class="card-text d-flex flex-row align-items-end bd-highlight">
                             <div class="card-text w-100">
-                                <p class="text-white m-0">{{ picture.title }}</p>
-                                <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                <p class="text-white text-state m-0">{{ picture.title }}</p>
+                                <p class="card-text text-state text-white m-0">{{ picture.location }}</p>
                             </div>
                             <div class="card-text flex-shrink-1 ">
-                                <p class="text-white text-sm-right m-0">{{ picture.date }}</p>
-                                <p class="card-text text-white text-right m-0">{{ picture.month }}</p>
+                                <p class="text-white text-state text-sm-right m-0">{{ picture.date }}</p>
+                                <p class="card-text text-state text-white text-right m-0">{{ picture.month }}</p>
                             </div>
                         </div>
                     </div>
                     <div class="card-body px-0">
-                        <button class="btn btn-sm btn-outline-dark float-left" style="border-radius: 15px;" type="button ">Reagendar</button>
-                        <button class="btn btn-sm btn-dark float-right" style="border-radius: 15px;" type="button ">Aceptar</button>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-12 d-none d-md-block">
+                                <p class="text-success m-0">{{ picture.title }}</p>
+                            </div>
+                            <div class="col-md-6 col-sm-12">
+                                <button class="btn btn-sm btn-outline-dark float-right" style="border-radius: 15px;" type="button ">Reagendar</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -34,28 +40,35 @@
                     <img class="card-img-top " [src]="picture.img ">
                     <div class="card-img-overlay col-sm-12">
                         <div class="card-title">
-                            <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                            <p class="text-white text-state  d-inline"><b>{{ picture.state }}</b></p>
                             <div class="text-white d-inline float-right">
-                                <!-- <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon> -->
+                                <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                             </div>
                         </div>
                         <div class="card-text d-flex bd-highlight">
                             <div class="card-text w-100">
-                                <p class="text-white m-0">{{ picture.title }}</p>
-                                <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                <p class="text-white text-state  m-0">{{ picture.title }}</p>
+                                <p class="card-text text-state text-white m-0">{{ picture.location }}</p>
                             </div>
                             <div class="card-text flex-shrink-1 ">
-                                <p class="text-white text-sm-right m-0">{{ picture.date }}</p>
-                                <p class="card-text text-white text-right m-0">{{ picture.month }}</p>
+                                <p class="text-white text-state  text-sm-right m-0">{{ picture.date }}</p>
+                                <p class="card-text text-state text-white text-right m-0">{{ picture.month }}</p>
                             </div>
                         </div>
                     </div>
                     <div class="card-body px-0">
-                        <button class="btn btn-sm btn-outline-dark float-left" style="border-radius: 15px;" type="button ">Reagendar</button>
-                        <button class="btn btn-sm btn-dark float-right" style="border-radius: 15px;" type="button ">Aceptar</button>
+                        <div class="row">
+                            <div class="col-md-6 d-none d-md-block">
+                                <p class="text-success m-0">{{ picture.title }}</p>
+                            </div>
+                            <div class="col-md-6">
+                                <button class="btn btn-sm btn-outline-dark float-right" style="border-radius: 15px;" type="button ">Reagendar</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
