--- a/segurenta/src/app/shared/components/carousel/carousel.component.html
+++ b/segurenta/src/app/shared/components/carousel/carousel.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./assets/img/bgHome.png" class="d-block w-100">
+            <img src="./assets/img/home_broker.png" class="d-block w-100">
         </div>
         <div class="carousel-item">
-            <img src="./assets/img/bgHome.png" class="d-block w-100">
+            <img src="./assets/img/home_broker.png" class="d-block w-100">
         </div>
         <div class="carousel-item">
-            <img src="./assets/img/bgHome.png" class="d-block w-100">
+            <img src="./assets/img/home_broker.png" class="d-block w-100">
         </div>
     </div>
     <div class="img-overlay">
