--- a/segurenta/src/app/shared/components/in-progress/in-progress.component.html
+++ b/segurenta/src/app/shared/components/in-progress/in-progress.component.html
@@ -1,7 +1,7 @@
 <div class="col">
     <div class="card">
         <div class="card-body">
-            <h2 class="card-title font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> En Proceso</h2>
+            <h2 class="card-title"><span class="text-muted"><u>P</u>ropiedades</span> En Proceso</h2>
             <div class="card-deck mb-5">
                 <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem; " *ngFor="let picture of picturesZone ">
                     <img class="card-img-top " [src]="picture.img ">
