--- a/segurenta/src/app/shared/components/scheduler/calendar/calendar.component.css
+++ b/segurenta/src/app/shared/components/scheduler/calendar/calendar.component.css
@@ -1,4 +1,4 @@
 .cal-day-selected,
 .cal-day-selected:hover {
-    background-color: deeppink !important;
+    background-color: #e602f573 !important;
 }
