--- a/segurenta/src/app/shared/components/scheduler/scheduler.component.html
+++ b/segurenta/src/app/shared/components/scheduler/scheduler.component.html
@@ -9,10 +9,7 @@
 </div>
 <div class="container">
     <div class="row text-center">
-        <div class="col-8">
-            <app-calendar [viewFormat]="view"></app-calendar>
-        </div>
-        <div class="col-4">
+        <div class="col-8 text-right col-offset-4">
             <div class="btn-group">
                 <div class="btn btn-primary" (click)="setView('month')" [class.active]="view === 'month'">
                     Mes
@@ -22,6 +19,24 @@
                 </div>
                 <div class="btn btn-primary" (click)="setView('day')" [class.active]="view === 'day'">
                     Hoy
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <app-calendar [view]="view" [newEvent]="markDays"></app-calendar>
+        </div>
+        <div class="col-4">
+            <div class="row">
+                <div class="col-12 my-5 text-right">
+                    <div class="btn btn-primary" *ngIf="!markDays" (click)="markDays = true;">
+                        Nuevo Evento
+                    </div>
+                    <div class="btn btn-primary" *ngIf="markDays" (click)="markDays = false;">
+                        Cancelar
+                    </div>
+                </div>
+                <div class="col-12" *ngIf="markDays">
+                    <app-form-event></app-form-event>
                 </div>
             </div>
         </div>
