--- a/segurenta/src/styles.css
+++ b/segurenta/src/styles.css
@@ -2,6 +2,7 @@
 
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 /* @font-face {
     font-family: 'Montserrat';
